Fix text align, remove header

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -177,9 +177,9 @@ h {
 
 #temp-value {
   position: absolute;
-  width: 75px;
+  width: 110px;
   height: 0px;
-  left: 203px;
+  left: 180px;
   top: 40px;
 
   font-family: Epilogue;
@@ -224,9 +224,9 @@ h {
 
 #wind-value {
   position: absolute;
-  width: 82px;
+  width: 90px;
   height: 46px;
-  left: 44px;
+  left: 40px;
   top: 10px;
 
   font-family: Epilogue;
@@ -272,9 +272,9 @@ h {
 
 #humidity-value {
   position: absolute;
-  width: 37px;
+  width: 70px;
   height: 46px;
-  left: 66.5px;
+  left: 51px;
   top: 10px;
 
   font-family: Epilogue;
